--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -1,13 +1,17 @@
 doctype html
 html
     head
-        title= 'FIFA statistics'
+        title= 'Claire Gizard - Curriculum'
         link(rel='stylesheet', href='/stylesheets/style.css')
     body
-        a(href='/') Home - FIFA statistics
+        a(href='/') Home
         br
-        a(href='/football') World Cup champions
+        a(href='/contact') Contact Information
         br
-        a(href='/goldenball') Golden Ball winners
+        a(href='/experience') Professional Experience
+        br
+        a(href='/about') About Me
+        br
+        a(href='/skill') My Skills
 
         block content
