--- a/app_server/views/index.pug
+++ b/app_server/views/index.pug
@@ -1,5 +1,5 @@
 extends layout
 
 block content
-    h1= 'FIFA World Cup statistics'
-    p Click on the links above to see some statistics about the FIFA Football World Cup games since 1990
+    h1= 'Claire Gizard - Curriculum'
+    p Curriculum of Claire Gizard developed in Mean Js in the context of her Erasmus studies in Finland.
