--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -1,17 +1,37 @@
 doctype html
+html(lang="en")
 html
-    head
-        title= 'Claire Gizard - Curriculum'
-        link(rel='stylesheet', href='/stylesheets/style.css')
-    body
-        a(href='/') Home
-        br
-        a(href='/contact') Contact Information
-        br
-        a(href='/experience') Professional Experience
-        br
-        a(href='/about') About Me
-        br
-        a(href='/skill') My Skills
+  head
+    title= 'Claire Gizard - Curriculum'
+    link(rel='stylesheet', href='/stylesheets/style.css')
+    meta(charset="utf-8")
+    meta(name="viewport", content="width=device-width, initial-scale=1 shrink-to-fit=no")
 
-        block content
+    <!-- Bootstrap CSS -->
+    link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css", integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm", crossorigin="anonymous")
+
+
+
+  body
+    nav.navbar.fixed-top.navbar-inverse.bg-inverse
+      a.navbar-brand(href='/') Home
+      a.navbar-brand(href='/Experience') Professional Experience
+      a.navbar-brand(href='/About') About me
+      a.navbar-brand(href='/Skill') My Skills
+      a.navbar-brand(href='/contact') Contact
+
+
+
+    .container
+      block content
+      footer.page-footer.font-small.blue.pt-4.mt-4
+        .footer-copyright.py-3.text-center
+          .container-fluid
+            | Linkedin link
+            a(href='https://fr.linkedin.com/in/claire-gizard-88bb68113')  Claire Gizard
+
+
+
+    script(src="https://code.jquery.com/jquery-3.2.1.slim.min.js", integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN", crossorigin="anonymous")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js", integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q", crossorigin="anonymous")
+    script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js", integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl", crossorigin="anonymous")
