--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -15,6 +15,7 @@ html
   body
     nav.navbar.fixed-top.navbar-inverse.bg-inverse
       a.navbar-brand(href='/') Home
+        img(src="images/giantotter.jpg", style="width: 70px;")
       a.navbar-brand(href='/Experience') Professional Experience
       a.navbar-brand(href='/About') About me
       a.navbar-brand(href='/Skill') My Skills
@@ -22,7 +23,7 @@ html
 
 
 
-    .container
+    .containerw(style='margin-top: 100px;')
       block content
       footer.page-footer.font-small.blue.pt-4.mt-4
         .footer-copyright.py-3.text-center
