--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -15,7 +15,7 @@ html
   body
     nav.navbar.fixed-top.navbar-inverse.bg-inverse
       a.navbar-brand(href='/') Home
-        img(src="images/giantotter.jpg", style="width: 70px;")
+        img(src="/images/giantotter.jpg", style="width: 70px;")
       a.navbar-brand(href='/Experience') Professional Experience
       a.navbar-brand(href='/About') About me
       a.navbar-brand(href='/Skill') My Skills
